--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,7 +10,7 @@ database:
 options:
   debug: false
   debug-function: false
-  #你的核心数
+  #Your CPU Core
   thread-pool-size: 4
   number-format: "#.##"
   big-decimal-scale: 4
