--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,25 @@
-name: build
+name: Workflow Build
 on: [ push ]
-
 jobs:
   build:
-    strategy:
-      matrix:
-        java: [ 8.0 ]
-        os: [ ubuntu-20.04 ]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
+      - name: cache gradle packages
+        uses: actions/cache@v2
+        with:
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk ${{ matrix.java }}
+      - name: setup jdk 8.0
         uses: actions/setup-java@v2
         with:
           distribution: adopt
-          java-version: ${{ matrix.java }}
+          java-version: 8.0
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
       - name: build
