--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,14 @@
-name: Workflow Build
-on: [ push ]
+name: build
+on:
+  push:
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
-      - name: cache gradle packages
-        uses: actions/cache@v2
-        with:
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: setup jdk 8.0
@@ -22,38 +18,61 @@ jobs:
           java-version: 8.0
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
+      # 第一次构建
       - name: build
+        continue-on-error: true
+        id: build_1
         run: ./gradlew build
+      # 第二次构建
+      - name: build (retry 1)
+        continue-on-error: true
+        id: build_2
+        if: steps.build_1.outcome == 'failure'
+        run: ./gradlew build
+      # 第三次构建
+      - name: build (retry 2)
+        continue-on-error: true
+        id: build_3
+        if: steps.build_2.outcome == 'failure'
+        run: ./gradlew build
+      # 第四次构建
+      - name: build (retry 3)
+        id: build_4
+        if: steps.build_3.outcome == 'failure'
+        run: ./gradlew build
+      # 上传构建文件
       - name: capture build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: Artifacts
           path: build/libs/
-  build-code:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
-      - name: cache gradle packages
-        uses: actions/cache@v2
-        with:
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk 8.0
-        uses: actions/setup-java@v2
-        with:
-          distribution: adopt
-          java-version: 8.0
-      - name: make gradle wrapper executable
-        run: chmod +x ./gradlew
-      - name: buildCode
+      - name: build
+        continue-on-error: true
+        id: build_api_1
         run: ./gradlew build -Pcode=true
-      - name: capture build code artifacts
+      - name: build (retry 1)
+        continue-on-error: true
+        id: build_api_2
+        if: steps.build_api_1.outcome == 'failure'
+        run: ./gradlew build -Pcode=true
+      - name: build (retry 2)
+        continue-on-error: true
+        id: build_api_3
+        if: steps.build_api_2.outcome == 'failure'
+        run: ./gradlew build -Pcode=true
+      - name: build (retry 3)
+        id: build_api_4
+        if: steps.build_api_3.outcome == 'failure'
+        run: ./gradlew build -Pcode=true
+      # 上传构建文件
+      - name: capture build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: Artifacts
-          path: build/libs/
+          path: build/libs
+      - name: Sync version
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          branch: master
+          folder: .
+          commit-message: 'sync version'
