--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,4 +75,4 @@ jobs:
         with:
           branch: master
           folder: .
-          commit-message: 'sync version'
+          commit-message: 'sync version.'
