--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,11 @@ jobs:
           path: build/libs/
       - name: Decode
         run: |
+          echo "${{secrets.$SIGNING_KEY_ID}}"
           echo "${{secrets.SIGNING_SECRET_KEY_RING_FILE}}" > ~/.gradle/secring.gpg.base64
           base64 -d ~/.gradle/secring.gpg.base64 > ~/.gradle/secring.gpg
       - name: Publish package
-        run: gradle publish -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
+        run: gradle publish -Porder=$GITHUB_RUN_NUMBER -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
         env:
           OSSRH_USERNAME: ${{ secrets.USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.PASSWORD }}
@@ -100,7 +101,7 @@ jobs:
           echo "${{secrets.SIGNING_SECRET_KEY_RING_FILE}}" > ~/.gradle/secring.gpg.base64
           base64 -d ~/.gradle/secring.gpg.base64 > ~/.gradle/secring.gpg
       - name: Publish package
-        run: gradle publish -Pcode=true -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
+        run: gradle publish -Porder=$GITHUB_RUN_NUMBER -Pcode=true -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
         env:
           OSSRH_USERNAME: ${{ secrets.USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.PASSWORD }}
