--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,8 +20,8 @@ jobs:
         run: chmod +x ./gradlew
       - name: Decode
         run: |
-          echo "${{ secrets.SIGNING_KEY_ID }}"
-          echo "${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}" > ~/.gradle/secring.gpg.base64
+          echo "$SIGNING_KEY_ID"
+          echo "$SIGNING_SECRET_KEY_RING_FILE" > ~/.gradle/secring.gpg.base64
           base64 -d ~/.gradle/secring.gpg.base64 > ~/.gradle/secring.gpg
       - name: Publish package
         run: gradle publish -Porder=$GITHUB_RUN_NUMBER -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
@@ -44,7 +44,7 @@ jobs:
         run: chmod +x ./gradlew
       - name: Decode
         run: |
-          echo "${{secrets.SIGNING_SECRET_KEY_RING_FILE}}" > ~/.gradle/secring.gpg.base64
+          echo "$SIGNING_SECRET_KEY_RING_FILE" > ~/.gradle/secring.gpg.base64
           base64 -d ~/.gradle/secring.gpg.base64 > ~/.gradle/secring.gpg
       - name: Publish package
         run: gradle publish -Porder=$GITHUB_RUN_NUMBER -Pcode=true -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
