--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,8 +20,8 @@ jobs:
         run: chmod +x ./gradlew
       - name: Decode
         run: |
-          echo "$SIGNING_KEY_ID"
-          echo "$SIGNING_SECRET_KEY_RING_FILE" > ~/.gradle/secring.gpg.base64
+          echo "$GITHUB_SIGNING_KEY_ID"
+          echo "$GITHUB_SIGNING_SECRET_KEY_RING_FILE" > ~/.gradle/secring.gpg.base64
           base64 -d ~/.gradle/secring.gpg.base64 > ~/.gradle/secring.gpg
       - name: Publish package
         run: gradle publish -Porder=$GITHUB_RUN_NUMBER -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
