--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,7 +101,7 @@ jobs:
           echo "${{secrets.SIGNING_SECRET_KEY_RING_FILE}}" > ~/.gradle/secring.gpg.base64
           base64 -d ~/.gradle/secring.gpg.base64 > ~/.gradle/secring.gpg
       - name: Publish package
-        run: gradle publish -Porder=$GITHUB_RUN_NUMBER -Pcode=true -Psigning.keyId=$SIGNING_KEY_ID -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
+        run: gradle publish -Porder=$GITHUB_RUN_NUMBER -Pcode=true -Psigning.keyId=1BCAF9B4 -Psigning.password=$SIGNING_KEY_PASSWORD -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
         env:
           OSSRH_USERNAME: ${{ secrets.USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.PASSWORD }}
