更多的Asahi桥接Bukkit，Math前缀解释器
Math:
- asin
- acos
- cos
- atan
- ln
- log
- log2
- log10
- sin
- tan

Bukkit:
- effect
- potion
- actionbar
- bossbar
- title
- command
- tell
- damage

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,3 @@
 #Sun Dec 18 16:16:45 CST 2022
-version=1.6.0-dev
+version=1.6.0-alpha
 group=com.skillw.pouvoir
-username=Glom
-password=ZstIsBest00&
-email=88595433@qq.com
