修复 默认配置报错 asahi.js标准库版本过久 run指令参数分割问题 --silent参数
# 修复
run指令参数分割问题
asahi.js标准库不兼容jdk11以下环境

# 新增
run 指令 添加 `--silent` 参数可屏蔽脚本执行信息

--- a/src/main/resources/dispatchers/custom-trigger.yml
+++ b/src/main/resources/dispatchers/custom-trigger.yml
@@ -7,7 +7,7 @@ my trigger:
     based-on: player
     time: 5s
   pre-handle: |-
-    &player message '你说话了! (此消息每5秒只能触发一次)'
+    tell &player '你说话了! (此消息每5秒只能触发一次)'
   post-handle:
     type: js
     content: |-
