--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   build:
-    name: Build Jar
+    name: Build Jar1
     runs-on: ubuntu-latest
     steps:
       - name: checkout repository
