--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
 #Sun Dec 18 16:16:45 CST 2022
 version=1.6.1-legacy
 group=com.skillw.pouvoir
+#\u5F00\u542F\u7EBF\u7A0B\u5B88\u62A4\uFF0C\u7B2C\u4E00\u6B21\u7F16\u8BD1\u65F6\u5F00\u7EBF\u7A0B\uFF0C\u4E4B\u540E\u5C31\u4E0D\u4F1A\u518D\u5F00\u4E86
+org.gradle.daemon=true
+#\u914D\u7F6E\u7F16\u8BD1\u65F6\u7684\u865A\u62DF\u673A\u5927\u5C0F
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#\u5F00\u542F\u5E76\u884C\u7F16\u8BD1\uFF0C\u76F8\u5F53\u4E8E\u591A\u6761\u7EBF\u7A0B\u518D\u8D70
+org.gradle.parallel=true
+#\u542F\u7528\u65B0\u7684\u5B75\u5316\u6A21\u5F0F
+org.gradle.configureondemand=true
