--- a/.github/workflows/main_16.yml
+++ b/.github/workflows/main_16.yml
@@ -47,6 +47,21 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
+  build-api:
+    name: Build API Jar
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v2
+      - name: validate gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+      - name: setup jdk 8.0
+        uses: actions/setup-java@v2
+        with:
+          distribution: adopt
+          java-version: 8.0
+      - name: make gradle wrapper executable
+        run: chmod +x ./gradlew
       - name: build
         continue-on-error: true
         id: build_api_1
@@ -73,7 +88,7 @@ jobs:
           path: build/libs
   release:
     name: Release Jar
-    needs: [ build ]
+    needs: [ build, build-api ]
     runs-on: ubuntu-latest
     steps:
       - name: checkout repository
