--- a/.github/workflows/publish_17.yml
+++ b/.github/workflows/publish_17.yml
@@ -24,6 +24,10 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
+      - name: Decode
+        run: |
+          echo "${{secrets.SIGNING_SECRET_KEY_RING_FILE}}" > ~/.gradle/secring.pgp.base64
+          base64 -d ~/.gradle/secring.pgp.base64 > ~/.gradle/secring.pgp
       # 发布到仓库
       - name: publish
         id: publish_1
@@ -31,7 +35,7 @@ jobs:
         env:
           NEXUS_USERNAME: ${{ secrets.USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.PASSWORD }}
-        run: ./gradlew publish -Papi=true -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD
+        run: ./gradlew publish -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD -Psigning.keyId=${{secrets.SIGNING_KEY_ID}} -Psigning.password=${{secrets.SIGNING_KEY_PASSWORD}} -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
 
       # 发布到仓库: 重试-1
       - name: publish (retry 1)
@@ -41,7 +45,7 @@ jobs:
         env:
           NEXUS_USERNAME: ${{ secrets.USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.PASSWORD }}
-        run: ./gradlew publish -Papi=true -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD
+        run: ./gradlew publish -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD -Psigning.keyId=${{secrets.SIGNING_KEY_ID}} -Psigning.password=${{secrets.SIGNING_KEY_PASSWORD}} -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
 
       # 发布到仓库: 重试-2
       - name: publish (retry 2)
@@ -51,7 +55,7 @@ jobs:
         env:
           NEXUS_USERNAME: ${{ secrets.USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.PASSWORD }}
-        run: ./gradlew publish -Papi=true -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD
+        run: ./gradlew publish -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD -Psigning.keyId=${{secrets.SIGNING_KEY_ID}} -Psigning.password=${{secrets.SIGNING_KEY_PASSWORD}} -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
 
       # 发布到仓库: 重试-3
       - name: publish (retry 3)
@@ -60,4 +64,11 @@ jobs:
         env:
           NEXUS_USERNAME: ${{ secrets.USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.PASSWORD }}
-        run: ./gradlew publish -Papi=true -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD
+        run: ./gradlew publish -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD -Psigning.keyId=${{secrets.SIGNING_KEY_ID}} -Psigning.password=${{secrets.SIGNING_KEY_PASSWORD}} -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
+      - name: Nexus release
+        uses: Propromp/nexus-release@1
+        with:
+          server: "s01.oss.sonatype.org"
+          groupId: "com.skillw.pouvoir"
+          nexusUsername: ${{ secrets.NEXUS_USERNAME }}
+          nexusPassword: ${{ secrets.NEXUS_PASSWORD }}
