--- a/.github/workflows/publish_17.yml
+++ b/.github/workflows/publish_17.yml
@@ -65,10 +65,8 @@ jobs:
           NEXUS_USERNAME: ${{ secrets.USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.PASSWORD }}
         run: ./gradlew publish -Porder=$GITHUB_RUN_NUMBER -Pbuild=$GITHUB_RUN_NUMBER -Pusername=$NEXUS_USERNAME -Ppassword=$NEXUS_PASSWORD -Psigning.keyId=${{secrets.SIGNING_KEY_ID}} -Psigning.password=${{secrets.SIGNING_KEY_PASSWORD}} -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.pgp)
-      - name: Nexus release
-        uses: Propromp/nexus-release@1
+      - name: Release on nexus
+        uses: monkeyWie/maven-nexus-release@v1.0.0
         with:
-          server: "s01.oss.sonatype.org"
-          groupId: "com.skillw.pouvoir"
-          nexusUsername: ${{ secrets.USERNAME }}
-          nexusPassword: ${{ secrets.PASSWORD }}
+          maven-repo-server-username: ${{ secrets.USERNAME }}
+          maven-repo-server-password: ${{ secrets.PASSWORD }}
