--- a/.github/workflows/javadoc_165.yml
+++ b/.github/workflows/javadoc_165.yml
@@ -17,10 +17,31 @@ jobs:
         with:
           distribution: adopt
           java-version: 8.0
-      - name: build
+      - name: chmod
         run: |-
           chmod +x gradlew
-          ./gradlew dokkaJavadoc
+      # 第一次构建
+      - name: build_doc
+        continue-on-error: true
+        id: build_1
+        run: ./gradlew dokkaJavadoc
+      # 第二次构建
+      - name: build_doc (retry 1)
+        continue-on-error: true
+        id: build_2
+        if: steps.build_1.outcome == 'failure'
+        run: ./gradlew dokkaJavadoc
+      # 第三次构建
+      - name: build_doc (retry 2)
+        continue-on-error: true
+        id: build_3
+        if: steps.build_2.outcome == 'failure'
+        run: ./gradlew dokkaJavadoc
+      # 第四次构建
+      - name: build_doc (retry 3)
+        id: build_4
+        if: steps.build_3.outcome == 'failure'
+        run: ./gradlew dokkaJavadoc
       - name: Deploy
         uses: moodiest/push-to-branch-action@develop
         env:
