--- a/.github/workflows/publish_165.yml
+++ b/.github/workflows/publish_165.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Decode
         run: |
           if [ ! -d "~/.gradle/" ]; then
-            mkdir ~/.gradle
+            mkdir ~/.gradle/
           else
             echo "~/.gradle/ exists"
           fi
