--- a/.github/workflows/publish_165.yml
+++ b/.github/workflows/publish_165.yml
@@ -26,11 +26,8 @@ jobs:
         run: chmod +x ./gradlew
       - name: Decode
         run: |
-          if [ ! -d "~/.gradle/" ]; then
-            mkdir ~/.gradle/
-          else
-            echo "~/.gradle/ exists"
-          fi
+          rm -rf ~/.gradle/
+          mkdir ~/.gradle/
           touch ~/.gradle/secring.pgp.base64
           echo "${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}" > ~/.gradle/secring.pgp.base64
           base64 -d ~/.gradle/secring.pgp.base64 > ~/.gradle/secring.pgp
